Home page completed.

--- a/index.html
+++ b/index.html
@@ -4,9 +4,59 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Blog</title>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/flaticon.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Hello world!
+  <header>
+    <section class="social-section">
+      <ul class="list-icon">
+        <li class="icon-nav">
+          <a href="#"> 
+            <span class="flaticon-001-facebook"></span>
+          </a>
+        </li>
+        <li class="icon-nav">
+          <a href="#">
+            <span class="flaticon-013-twitter-1"></span>
+          </a>
+        </li>
+        <li class="icon-nav">
+          <a href="#">
+            <span class="flaticon-011-instagram"></span>
+          </a>
+        </li>
+        <li class="icon-nav">
+          <a href="#">
+            <span class="flaticon-010-linkedin"></span>
+          </a>
+        </li>
+        <li class="icon-nav">
+          <a href="#">
+            <span class="flaticon-008-youtube"></span>
+          </a>
+        </li>
+      </ul>
+    </section>
+
+    <nav>
+      <section class="logo-container">
+        <a href="#"></a>
+      </section>
+      <section class="about-container">
+        <a href="./pages/profile.html">
+          About me  
+        </a>
+      </section>
+    </nav>
+  </header>
+
+  <main>
+    <h1>Learn about the news and news from the Tech World</h1>
+    <div class="action">
+      <a href="#">Enter now!</a>
+    </div>
+  </main>
 </body>
 </html>
