Initialized blog page

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Blog</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/root.css">
   <link rel="stylesheet" href="./css/flaticon.css">
   <link rel="stylesheet" href="./css/main.css">
 </head>
@@ -42,7 +43,7 @@
 
     <nav>
       <section class="logo-container">
-        <a href="#"></a>
+        <a href="./pages/blogs.html"></a>
       </section>
       <section class="about-container">
         <a href="./pages/profile.html">
